<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/server_profiles">

        <Preference
            app:key="server_profiles"
            app:title="@string/server_profiles"
            app:summary="Manage your MeTube server profiles" />

    </PreferenceCategory>
    
    <PreferenceCategory app:title="@string/torrent_sharing">

        <SwitchPreferenceCompat
            app:key="direct_torrent_sharing_enabled"
            app:title="@string/enable_direct_torrent_sharing"
            app:summary="@string/enable_direct_torrent_sharing_summary"
            app:defaultValue="true" />

        <Preference
            app:key="reset_torrent_prompts"
            app:title="@string/reset_torrent_prompts"
            app:summary="@string/reset_torrent_prompts_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance">

        <Preference
            app:key="language_selection"
            app:title="@string/language"
            app:summary="@string/language_summary" />

         <Preference
             app:key="theme_selection"
             app:title="@string/theme"
             app:summary="@string/theme_summary" />

         <Preference
             app:key="theme_creator"
             app:title="@string/theme_creator"
             app:summary="@string/theme_creator_summary" />

      </PreferenceCategory>

    <PreferenceCategory app:title="@string/security">

        <SwitchPreferenceCompat
            app:key="secure_access_enabled"
            app:title="@string/enable_secure_access"
            app:summary="@string/enable_secure_access_summary"
            app:defaultValue="false" />

        <ListPreference
            app:key="auth_method"
            app:title="@string/authentication_method"
            app:summary="@string/authentication_method_summary"
            app:entries="@array/auth_method_entries"
            app:entryValues="@array/auth_method_values"
            app:defaultValue="pin"
            app:dependency="secure_access_enabled" />

        <SwitchPreferenceCompat
            app:key="biometric_enabled"
            app:title="@string/enable_biometric"
            app:summary="@string/enable_biometric_summary"
            app:defaultValue="true"
            app:dependency="secure_access_enabled" />

        <Preference
            app:key="change_pin"
            app:title="@string/change_pin"
            app:summary="@string/change_pin_summary"
            app:dependency="secure_access_enabled" />

        <Preference
            app:key="change_password"
            app:title="@string/change_password"
            app:summary="@string/change_password_summary"
            app:dependency="secure_access_enabled" />

    </PreferenceCategory>

 </PreferenceScreen>